testdata/fixtures/yaml/k8s-memory-limit.yaml
apiVersion: v1
kind: Pod
metadata:
  name: memory-demo
  namespace: mem-example
spec:
  containers:
    - name: memory-demo-ctr
      image: polinux/stress
      resources:
        requests:
          memory: '100Mi'
        limits:
          memory: '200Mi'
      command: ['stress']
      args: ['--vm', '1', '--vm-bytes', '150M', '--vm-hang', '1']
